# sensai

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_logits_server.py  transformers_logits_server.py
examples/distillation/: README.md  run.bash  student.py
examples/double/: billion.py  client.py  server.py
sensai/: __init__.py  client.py  collate_functions.py  logits_server.py  server.py  utils.py
sensai/transports/: __init__.py  named_pipe.py  shared_memory.py  transport_abc.py  unix_socket.py
tests/: __init__.py  test_cli_transports.py  test_collate_functions.py  test_input_ids_server.py  test_logits_server.py  test_server_integration.py
