[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensAI"
version = "0.0.1"
authors = [
  { name = "Lukas Galke" },
  { name = "Peter Schneider-Kamp" }
]

description = "Framework for online teacher logits/tokens generation in fully independent side processes."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'click',
    'numpy',
    'torch',
    'transformers'
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["build", "twine"]
all = ["build", "twine", "pytest"]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/sensai"
"Bug Tracker" = "https://github.com/schneiderkamplab/sensai/issues"

[tool.hatch.build]
include = [
    'sensai',
    'LICENSE',
    'README.md',
]
